feat: Implement email render mode in parsing service and pipeline
Updates EmailParsingService to preserve original HTML from emails and
select appropriate rendering based on configured mode. Adds logic to:
- Extract and normalize originalHtml from email content
- Resolve effective render mode from AppProperties
- Choose between original HTML, markdown-derived HTML, or plaintext

Improves context ID handling for long message IDs by implementing
deterministic hashing to keep IDs under 200 chars while maintaining
uniqueness. EmailDocumentBuilder and EmailPipeline updated to pass
originalHtml through the processing chain.